[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defecttracer"
version = "0.1.0"
description = "Automated defect reproduction framework — drives GDB to replay crash traces and classify root causes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
dtrace = "defecttracer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["defecttracer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
